syntax = "proto3";

// Internal API for processing vulnerability analysis results.
package org.hyades.vulnanalysis.v1.internal;

option java_multiple_files = true;
option java_package = "org.hyades.proto.vulnanalysis.v1.internal";

message ScanCompletion {
  ScanCompletionStatus status = 1;
}

enum ScanCompletionStatus {
  // Completion status of the scan is unknown.
  SCAN_COMPLETION_STATUS_UNKNOWN = 0;
  // Completion status of the scan is pending.
  SCAN_COMPLETION_STATUS_PENDING = 1;
  // Completion status of the scan is complete.
  SCAN_COMPLETION_STATUS_COMPLETE = 2;
}